--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,20 +1,20 @@
 [RadMC3D]
 
-# Number of photons for thermal Monte Carlo run
+# Number of photons
 N_phot        : 100000000
-# Number of photons for scattering mode
+# Number of scattering photons
 N_phot_scat   : 100000000
 # Number of angles between 0 and pi/2 for the scattering matrices
 N_ang         : 91
-# Maximum scattering mode. See RadMC3d manual for details
+# Maximum scattering mode
 scat_mode_max : 5
-# Material. Data file with the optical constants used for creating the opacities.
+# Material
 material      : pyrmg70k
-# Bulk density of material in g/cm3
+# Bulk density of material in g/cm^3
 rho_mat       : 2.0
 # Number of particle species
 N_spec        : 10
-# Minimum particle size in cm. Micrometer grains needed for scattering images.
+# Minimum particle size in cm
 a_min         : 1.e-4
 # Maximum particle size in cm
 a_max         : 1.e2
@@ -32,14 +32,24 @@ d_fargo: 1.e0
 
 [Simulation]
 
-# Number of snapshot that should be used to create the radiative transfer files.
+# Number of snapshot that should be used to create the simulation
 i_snapshot: 6000
-# Total disk mass in solar masses.
+# Total disk mass in solar masses
 M_disk:     0.01
-# Dust-to-gas ratio. Total dust mass: M_disk * d2g * M_sun
+# Dust-to-gas ratio
 d2g:        0.01
 # Molar mass of gas in g per mole
 mu:         2.3
+# Size in AU of smoothing kernel for particle distribution
+D:          5.0
+# Alpha viscosity parameter
+alpha:      1.e-3
+# Radius of star in solar radii
+R_star:     1.
+# Mass of star in solar masses
+M_star:     1.
+# Temperature of star in K
+T_star:     5700.  
 
 
 
@@ -49,18 +59,18 @@ mu:         2.3
 
 # Number of radial grid points
 N_R           : 128
-# Refine the first N_R_refine grid points. (N_R_refine==0 <=> no refinement). Better results when the inner edge of the disk has more grid points.
+# Refine the first N_R_refine grid points. (N_R_refine==0 <=> no refinement)
 N_R_refine    : 3
 # Factor of refinement
 i_R_refine    : 3
-# Inner boundary in AU
+# Inner boundary in au
 R_min         : 3.
-# Outer boundary in AU
+# Outer boundary in au
 R_max         : 200.
 
 # THE THETA GRID
 
-# Number of theta grid points per hemisphere. N_theta_tot has to be an even number! N_theta_tot = 2 * N_theta_hem.
+# Number of theta grid points per hemisphere
 N_theta_hem   : 32
 # Number of grid points int he coarse region
 N_theta_coarse: 8
