--- a/scripts/config.ini
+++ b/scripts/config.ini
@@ -1,20 +1,20 @@
 [RadMC3D]
 
-# Number of photons
+# Number of photons for thermal Monte Carlo run
 N_phot        : 100000000
-# Number of scattering photons
+# Number of photons for scattering mode
 N_phot_scat   : 100000000
 # Number of angles between 0 and pi/2 for the scattering matrices
 N_ang         : 91
-# Maximum scattering mode
+# Maximum scattering mode. See RadMC3d manual for details
 scat_mode_max : 5
-# Material
+# Material. Data file with the optical constants used for creating the opacities.
 material      : pyrmg70k
-# Bulk density of material in g/cm^3
+# Bulk density of material in g/cm3
 rho_mat       : 2.0
 # Number of particle species
 N_spec        : 10
-# Minimum particle size in cm
+# Minimum particle size in cm. Micrometer grains needed for scattering images.
 a_min         : 1.e-4
 # Maximum particle size in cm
 a_max         : 1.e2
@@ -32,11 +32,11 @@ d_fargo: 1.e0
 
 [Simulation]
 
-# Number of snapshot that should be used to create the simulation
+# Number of snapshot that should be used to create the radiative transfer files.
 i_snapshot: 6000
-# Total disk mass in solar masses
+# Total disk mass in solar masses.
 M_disk:     0.01
-# Dust-to-gas ratio
+# Dust-to-gas ratio. Total dust mass: M_disk * d2g * M_sun
 d2g:        0.01
 # Molar mass of gas in g per mole
 mu:         2.3
@@ -59,18 +59,18 @@ T_star:     5700.
 
 # Number of radial grid points
 N_R           : 128
-# Refine the first N_R_refine grid points. (N_R_refine==0 <=> no refinement)
+# Refine the first N_R_refine grid points. (N_R_refine==0 <=> no refinement). Better results when the inner edge of the disk has more grid points.
 N_R_refine    : 3
 # Factor of refinement
 i_R_refine    : 3
-# Inner boundary in au
+# Inner boundary in AU
 R_min         : 3.
-# Outer boundary in au
+# Outer boundary in AU
 R_max         : 200.
 
 # THE THETA GRID
 
-# Number of theta grid points per hemisphere
+# Number of theta grid points per hemisphere. N_theta_tot has to be an even number! N_theta_tot = 2 * N_theta_hem.
 N_theta_hem   : 32
 # Number of grid points int he coarse region
 N_theta_coarse: 8
